<resources>
    <string name="app_name">CalcKt</string>
    <string name="calculator">Calculator</string>
    <string name="_888888888888">888888888888</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="comma">,</string>
    <string name="_0">0</string>
    <string name="slash">÷</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="x">X</string>
    <string name="todo">TODO</string>
</resources>