<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/realScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/digitalnumbers_normal"
        android:gravity="right"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/screen"
        app:layout_constraintEnd_toEndOf="@+id/screen"
        app:layout_constraintStart_toStartOf="@+id/screen"
        app:layout_constraintTop_toTopOf="@+id/screen"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/plusMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calc_screen" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/digitalnumbers_normal"
        android:text="@string/_888888888888"
        android:textColor="#26000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="plus,division,percent,multiplication,comma,result,plusMinus,minus,ac" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="zero,nine,four,one,three,seven,two,eight,five,six" />

    <Button
        android:id="@+id/ac"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ac"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/plusMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/plusMinus"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/plus_minus"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintStart_toEndOf="@+id/ac"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/percent"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/percent"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/plusMinus"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_7"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/eight"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_8"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/plusMinus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/nine"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_9"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        app:cornerRadius="20dp"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_6"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/five"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_5"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_4"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/one"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_1"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_2"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_3"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/comma"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/comma"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/comma"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/zero"
        android:layout_width="178dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#F0F2F5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_0"
        android:textColor="#3A4E88"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/division"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#3A4E88"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/slash"
        android:textColor="#FEFEFE"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#3A4E88"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/minus"
        android:textColor="#FEFEFE"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/multiplication"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#3A4E88"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/plus"
        android:textColor="#FEFEFE"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/result"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#3A4E88"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/equal"
        android:textColor="#FEFEFE"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:backgroundTint="#3A4E88"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/x"
        android:textColor="#FEFEFE"
        android:textSize="29sp"
        android:textStyle="normal"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/division"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>